RESOLVED FIXED238991
[GStreamer] Runtime warning when the player configures the avdec AV1 decoder
https://bugs.webkit.org/show_bug.cgi?id=238991
Summary [GStreamer] Runtime warning when the player configures the avdec AV1 decoder
Philippe Normand
Reported 2022-04-08 03:24:25 PDT
(WebKitWebProcess:2): GLib-GObject-WARNING **: 20:34:32.280: g_object_set_is_valid_property: object class 'avdec_av1' has no property named 'max-threads'
Attachments
Patch (2.08 KB, patch)
2022-04-08 08:51 PDT, Philippe Normand
no flags
247
Comment 1 2022-04-08 04:08:09 PDT
ok, so considering this is the command i should use GST_DEBUG="3,webkit*:6" GST_DEBUG_FILE=/tmp/gst.log GST_DEBUG_DUMP_DOT_DIR=/tmp <browser> <https://www.youtube.com/watch?v=XIAor5VAjuE> how do i use it in epiphany? (in case, the url provided is one of the videos that do not play
Philippe Normand
Comment 2 2022-04-08 04:17:37 PDT
replace <browser> with epiphany
247
Comment 3 2022-04-08 04:21:02 PDT
first thing done, and i get an error about an invalid token after the <
Philippe Normand
Comment 4 2022-04-08 04:29:30 PDT
GST_DEBUG="3,webkit*:6" GST_DEBUG_FILE=/tmp/gst.log GST_DEBUG_DUMP_DOT_DIR=/tmp epiphany "https://www.youtube.com/watch?v=XIAor5VAjuE"
Philippe Normand
Comment 5 2022-04-08 08:51:58 PDT
EWS
Comment 6 2022-04-19 03:57:38 PDT
Committed r293013 (249752@main): <https://commits.webkit.org/249752@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457077 [details].
Radar WebKit Bug Importer
Comment 7 2022-04-19 03:58:13 PDT
Note You need to log in before you can comment on or make changes to this bug.