[GStreamer] Runtime warning when the player configures the avdec AV1 decoder https://bugs.webkit.org/show_bug.cgi?id=238991

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-19
Reviewed by Xabier Rodriguez-Calvar.

Not all libav GStreamer decoders have a max-threads property, the AV1 decoder for instance
does not. So we need to check the property is present before attempting to set it, in order
to avoid runtime warnings.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::configureVideoDecoder):

Canonical link: https://commits.webkit.org/249752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293013 268f45cc-cd09-0410-ab3c-d52691b4dbfc